apps/kutt/overlays/staging/kutt-ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kutt-ingress-staging
  labels:
    app.kubernetes.io/name: kutt-ingress-staging
spec:
  rules:
  - host: go.staging.joris.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kutt-svc
            port: 
              name: http
